--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "controller-interfaces",
-  "scope": "ape",
-  "version": "0.0.2",
-  "description": "interfaces for (MVCish) controller implementations. Broken out into their own package so that other packages can depend on just the interfaces",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/beatthat/controller-interfaces.git"
-  },
-  "files": [
-    "index.js",
-    "scripts",
-    "src"
-  ],
-  "author": "larrykirschner@gmail.com",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/beatthat/controller-interfaces/issues"
-  },
-  "homepage": "https://github.com/beatthat/controller-interfaces",
-  "scripts": {
-    "postinstall": "node scripts/postinstall.js",
-    "install:test": "rm -f *.tgz && npm pack && cd test && npm run clean && npm install",
-    "clean": "rm -f *.tgz && cd test && npm run clean",
-    "sync:test2src": "rsync -rv --include '*/' --include '*.cs' --exclude '*' --prune-empty-dirs test/Assets/Plugins/${npm_package_scope}/${npm_package_name}/ ./src/${npm_package_name}/",
-    "pub:tag": "git add -A && git commit -m ${npm_package_version} && git tag -a ${npm_package_version} -m ${npm_package_version} && git push origin master && git push origin ${npm_package_version}"
-  },
-  "dependencies": {
-    "ncp": "^2.0.0",
-    "mkdirp": "^0.5.1",
-    "bindings": "beatthat/bindings#semver:^0.0.4"
-  }
+    "name": "controller-interfaces",
+    "scope": "ape",
+    "version": "0.0.3",
+    "description": "interfaces for (MVCish) controller implementations. Broken out into their own package so that other packages can depend on just the interfaces",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/beatthat/controller-interfaces.git"
+    },
+    "files": [
+        "index.js",
+        "scripts",
+        "src"
+    ],
+    "author": "larrykirschner@gmail.com",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/beatthat/controller-interfaces/issues"
+    },
+    "homepage": "https://github.com/beatthat/controller-interfaces",
+    "scripts": {
+        "postinstall": "node scripts/postinstall.js",
+        "install:test": "rm -f *.tgz && npm pack && cd test && npm run clean && npm install",
+        "clean": "rm -f *.tgz && cd test && npm run clean",
+        "cp:test2src": "cd test && node scripts/cp-test2src.js",
+        "overwrite:test2src": "cd test && node scripts/overwrite-test2src.js",
+        "pub:tag": "git add -A && git commit -m ${npm_package_version} && git tag -a ${npm_package_version} -m ${npm_package_version} && git push origin master && git push origin ${npm_package_version}"
+    },
+    "dependencies": {
+        "path": "^0.12.7",
+        "unity-npm-utils": "github:beatthat/unity-npm-utils#semver:^0.0.9",
+        "bindings": "beatthat/bindings#semver:^0.0.7"
+    }
 }
