--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "controller-interfaces",
-  "scope": "ape",
+  "scope": "beatthat",
   "version": "1.0.0",
   "description": "interfaces for (MVCish) controller implementations. Broken out into their own package so that other packages can depend on just the interfaces",
   "main": "index.js",
@@ -11,7 +11,9 @@
   "files": [
     "index.js",
     "scripts",
-    "src"
+    "src",
+    "Runtime",
+    "Samples"
   ],
   "author": "larrykirschner@gmail.com",
   "license": "MIT",
